# wallpapergen

./: .gitignore  Cargo.toml  README.md
examples/: catppuccin.sh
src/: build.rs  main.rs
