[package]
name = "wallpapergen"
description = "Gradient wallpaper generator"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive", "wrap_help"] }
csscolorparser = { version = "0.6.2", features = ["serde"] }
image = "0.24.5"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.6.0"
